--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10875,5 +10875,10 @@ a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
+
+}
+
+a.disabled {
+    pointer-events: none;
 }
 
